--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@ body {
     box-sizing: border-box;
     min-height: 100%;
     margin: 0;
-    padding: 0 1rem 1rem;
+    padding: 0;
     gap: 1rem;
 }
 
@@ -36,82 +36,9 @@ body {
     white-space: pre-wrap;
 }
 
-.taskbar {
-    font-size: 28px;
-    font-weight: bold;
-    position: sticky;
-    z-index: 10;
-    top: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 40px;
-    margin-right: -1rem;
-    margin-left: -1rem;
-    -webkit-user-select: none;
-    text-align: center;
-    text-transform: uppercase;
-    color: #1eac39;
-    background-color: #125135;
-    text-shadow: none;
-    -webkit-app-region: drag;
-}
-
 .error {
     color: var(--color);
     text-shadow: var(--text-shadow);
     --color: #e32525;
     --text-shadow: 0 0 1px var(--color);
-}
-
-.buttons {
-    display: flex;
-    gap: 1rem;
-}
-
-.buttons > button:first-child {
-    flex-grow: 1;
-}
-
-/*noinspection CssReplaceWithShorthandSafely*/
-button {
-    font: var(--font);
-    padding: 6px 12px;
-    cursor: pointer;
-    user-select: none;
-    transition: color var(--t, 0.3s), background-size 0.3s;
-    text-transform: uppercase;
-    color: var(--color);
-    border: none;
-    background: linear-gradient(to bottom left, var(--color) 50%, #0000 50.1%) top right,
-    linear-gradient(to top right, var(--color) 50%, #0000 50.1%) bottom left;
-    background-repeat: no-repeat;
-    background-size: calc(var(--slant) + 1.3 * var(--border)) calc(var(--slant) + 1.3 * var(--border));
-    box-shadow: 0 0 0 200px inset var(--s, #0000), 0 0 0 var(--border) inset var(--color);
-    text-shadow: var(--text-shadow);
-    appearance: none;
-    --border: 1px;
-    --slant: 10px;
-    clip-path: polygon(0 0, calc(100% - var(--slant)) 0, 100% var(--slant), 100% 100%, var(--slant) 100%, 0 calc(100% - var(--slant)));
-}
-button:focus-visible {
-    outline: var(--border) solid #000c;
-    outline-offset: calc(-1 * var(--border));
-    background-size: 0 0;
-    clip-path: none;
-}
-button:hover,
-button:active {
-    color: #000;
-    background-size: 100% 100%;
-    --t: 0.2s 0.1s;
-}
-button:active {
-    transition: none;
-    --s: #0005;
-}
-
-button[disabled] {
-    pointer-events: none;
-    --color: gray;
 }
